# CYBER-SECURE-SCADA

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_READINESS.md  LICENSE  README.md  SECURITY.md  defender_core.py  hook.js  pyproject.toml  requirements.txt  scada_guard.onnx  scada_guard.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: scada-dual-terminal-demo.prompt.md
.github/workflows/: tests.yml
DEMO-CORRUPTEDHARDWARE/: .gitignore  CHANGELOG.md  README.md  defender_core.py  demo_payload.py  launcher.py  run_unprotected_b.ps1  scada_guard.onnx.data  scada_guard.py  simulator.py  unprotected_receiver.py
DEMO-CORRUPTEDHARDWARE/.github/workflows/: tests.yml
DEMO-CORRUPTEDHARDWARE/ml/: README.md  model.py  requirements_ml.txt  tokeniser.py  vocab.json
DEMO-CORRUPTEDHARDWARE/ml/data/: test.jsonl  train.jsonl
DEMO-CORRUPTEDHARDWARE/scada_root/: README.md
DEMO-CORRUPTEDHARDWARE/simulator/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  xref-simulator.html
DEMO-SSHLOGIN/: README.md  requirements.txt  scada_shell.py
DEMO-SSHLOGIN/Sovereign_SCADA_AI/: data_gen.py  model.py  predict.py  scada_logs.csv  scada_model.pth  tokenizer.py  train.py  verify.py  vocab.json
ml/: data_gen.py  dataset.py  evaluate.py  train.py  train_log.json
ml/data/: val.jsonl
scada_root/: grid_config.txt  pressure_thresholds.txt  safety_limits.txt  turbine_auth.csv
