[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scada-guard"
version = "1.0.0"
description = "Real-time SCADA file monitoring with ML"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "frida>=16.0.0",
    "rich>=13.0.0",
    "onnxruntime>=1.18.0",
]
